<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>

        <variable
            name="isLoading"
            type="Boolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:id="@+id/app_barLayout"
            app:liftOnScroll="true"
            android:elevation="10dp"
            app:elevation="10dp"
            android:background="@android:color/transparent">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/nav_toolbar"
                app:title="@string/destination_title"
                app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:paddingLeft="@dimen/size_10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:paddingTop="10dp"
                    android:paddingBottom="16dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">


                    <ImageView
                        android:src="@drawable/ic_flight_up"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginBottom="5dp"/>

                    <View
                        android:layout_width="1.5dp"
                        android:layout_weight="1"
                        android:background="@color/grey"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="0dp"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_flight_down"/>

                </LinearLayout>


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_width="match_parent"
                        android:hint="@string/origin"
                        app:boxStrokeWidth="0dp"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:boxBackgroundColor="@color/background"
                        android:layout_height="wrap_content"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/origin_edtxt"
                            android:singleLine="true"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>


                    </com.google.android.material.textfield.TextInputLayout>

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>

                    <com.google.android.material.textfield.TextInputLayout
                        app:endIconMode="clear_text"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:boxBackgroundColor="@color/background"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                        android:layout_width="match_parent"
                        android:hint="@string/destination"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:singleLine="true"
                            android:id="@+id/destination_ed"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>


                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ProgressBar
            android:id="@+id/loading_indicator"
            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="@{isLoading ? View.VISIBLE: View.GONE}"
            android:layout_below="@id/app_barLayout"
            android:indeterminate="true"
            android:indeterminateTint="#3949AB" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/airports_rv"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            tools:listitem="@layout/airport_item_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>