<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <import type="com.mobigod.avin.models.airport.AirportModel"/>

        <variable
            name="origin"
            type="AirportModel" />

        <variable
            name="destination"
            type="AirportModel" />

        <variable
            name="date"
            type="String" />
    </data>
    
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:padding="@dimen/layout_compact_padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="28sp"
                android:layout_marginBottom="20dp"
                android:text="@string/know_your_flight_schedules_here"/>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="4dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/origin_card"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        app:strokeColor="@color/colorPrimaryDark"
                        app:strokeWidth="2dp"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:padding="5dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="150dp">

                            <TextView
                                tools:text="dxb"
                                android:textColor="@android:color/black"
                                android:textStyle="bold"
                                android:text='@{origin.code == null ? "From": origin.code}'
                                android:textAllCaps="true"
                                android:textSize="30sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>


                            <TextView
                                tools:text="dubia, UAE"
                                android:visibility='@{(origin.country == null || origin.state == null || origin.country == null) ? View.GONE: View.VISIBLE}'
                                android:text='@{String.format("%s, %s", origin.state, origin.country)}'
                                android:textAllCaps="false"
                                android:textSize="14sp"
                                android:textAlignment="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>


                    <Space
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"/>


                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/destination_card"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        app:strokeColor="@color/colorPrimaryDark"
                        app:strokeWidth="2dp"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:padding="5dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="150dp">

                            <TextView
                                android:textStyle="bold"
                                android:textColor="@android:color/black"
                                tools:text="los"
                                android:text='@{destination.code == null ? "To": destination.code}'
                                android:textAllCaps="true"
                                android:textSize="30sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>


                            <TextView
                                android:visibility='@{(destination.country == null || destination.state == null || destination.country == null) ? View.GONE: View.VISIBLE}'
                                tools:text="lagos, nigeria"
                                android:text='@{String.format("%s, %s", destination.state, destination.country)}'
                                android:textSize="14sp"
                                android:textAlignment="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>



                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:padding="5dp"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/ic_arrow_right_fill"
                        android:layout_width="40dp"
                        android:layout_height="30dp"/>
                </androidx.cardview.widget.CardView>



            </FrameLayout>


            <Space
                android:layout_width="1dp"
                android:layout_height="20dp"/>

            <LinearLayout
                android:padding="4dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/departure_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:padding="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="100dp">

                        <TextView
                            tools:text="19 Apr 2020"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            android:text='@{date == null ? "Tap to set date": date}'
                            android:textAllCaps="true"
                            android:textSize="18sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>


                        <TextView
                            tools:text="Departure date"
                            android:text="@string/departure_date"
                            android:textAllCaps="false"
                            android:textSize="14sp"
                            android:textAlignment="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>


            <Space
                android:layout_width="1dp"
                android:layout_height="20dp"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/search_flights_btn"
                android:text="@string/search_flights"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>


        </LinearLayout>

    </ScrollView>

</layout>